@@ -1,3 +1,4 @@
+    ADDED: synchronizer, Feed to listbox
     ADDED: searcher, synchronizer: directory name filters (ex. '* | CVS/')
     ADDED: searcher is able to search content on remote URLs
     ADDED: panel splitter shows the percent values at moving
